Fix and improve some tests (not all of them, yet)